Revert "avoid overlap of dataset title and language selector"
This reverts commit 87d599db892ccbe501322e231da81c67bd6a5fa0.
Wait for https://github.com/opensearch-project/OpenSearch-Dashboards/pull/8204

--- a/src/plugins/data/public/ui/dataset_selector/_dataset_selector.scss
+++ b/src/plugins/data/public/ui/dataset_selector/_dataset_selector.scss
@@ -3,10 +3,6 @@
     margin-right: 4px;
   }
 
-  &__popover {
-    overflow: hidden;
-  }
-
   &__advancedButton {
     width: 100%;
   }
